# codefun-autosubmit

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
codefun_autosubmit/: __init__.py  __main__.py  cli.py
codefun_autosubmit/core/: __init__.py  browser.py  submission.py  tracker.py  utils.py
codefun_autosubmit/scripts/: __init__.py  account_tracker.py  auto_submit.py  batch_submit.py  fetch_ac.py
exp_conv/: .env.example  cpp_to_python_converter.py
tests/: test_core.py
